# Example custom configuration fox doxhell
[tool.doxhell]
docs_dirs = "docs"  # Specify exact directory where to look for YAML files
# The ignores have been commented out not to interfere with integration tests
# ignores = [
#     "DH002",  # We don't care if an no reason is given for requirements made obsolete
#     "DH006",  # We don't care about obsolete requirements being verified
# ]
verbosity = 1  # We like to see some more info

[tool.poetry]
name = "advanced-project"
version = "0.1.0"
description = ""
authors = ["Siim Lepik <siim.lepik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
